WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90891
[Gtk] fast/events/keydown-function-keys.html is failing
https://bugs.webkit.org/show_bug.cgi?id=90891
Summary
[Gtk] fast/events/keydown-function-keys.html is failing
Zan Dobersek
Reported
2012-07-10 10:00:05 PDT
The test fails because when F10 key press is simulated the context menu pops up. This is a known bug with recent xkeyboard-config version, reported at GNOME Bugzilla:
https://bugzilla.gnome.org/show_bug.cgi?id=661973
There's a workaround for this until that bug gets resolved, posted at Launchpad:
https://bugs.launchpad.net/ubuntu/+source/gtk+3.0/+bug/937822/comments/5
This can be used, with effect, in DumpRenderTree.
Attachments
Patch
(2.08 KB, patch)
2012-07-10 10:12 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2012-07-10 10:12:00 PDT
Created
attachment 151480
[details]
Patch
Martin Robinson
Comment 2
2012-07-10 10:13:26 PDT
Comment on
attachment 151480
[details]
Patch I guess we'll need this fix for WebKitTestRunner as well...
Zan Dobersek
Comment 3
2012-07-10 10:38:24 PDT
(In reply to
comment #2
)
> (From update of
attachment 151480
[details]
) > I guess we'll need this fix for WebKitTestRunner as well...
True, but WebKitTestRunner doesn't currently set up any GtkCSSProviders before testing.
Martin Robinson
Comment 4
2012-07-10 11:40:43 PDT
(In reply to
comment #3
)
> (In reply to
comment #2
) > > (From update of
attachment 151480
[details]
[details]) > > I guess we'll need this fix for WebKitTestRunner as well... > > True, but WebKitTestRunner doesn't currently set up any GtkCSSProviders before testing.
It hasn't needed to up to this point because the GtkCSSProviders was added to make DRT match the non-native scrollbar of WebKitTestRunner.
Zan Dobersek
Comment 5
2012-07-11 00:03:13 PDT
(In reply to
comment #4
)
> (In reply to
comment #3
) > > (In reply to
comment #2
) > > > (From update of
attachment 151480
[details]
[details] [details]) > > > I guess we'll need this fix for WebKitTestRunner as well... > > > > True, but WebKitTestRunner doesn't currently set up any GtkCSSProviders before testing. > > It hasn't needed to up to this point because the GtkCSSProviders was added to make DRT match the non-native scrollbar of WebKitTestRunner.
Oddly enough the test passes in WebKitTestRunner without unbinding the F10 key, so it seems there's no need for a GtkCSSProvider in WKTR.
WebKit Review Bot
Comment 6
2012-07-11 11:42:22 PDT
Comment on
attachment 151480
[details]
Patch Clearing flags on attachment: 151480 Committed
r122349
: <
http://trac.webkit.org/changeset/122349
>
WebKit Review Bot
Comment 7
2012-07-11 11:42:28 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug