[Gtk] fast/events/keydown-function-keys.html is failing https://bugs.webkit.org/show_bug.cgi?id=90891

Reviewed by Martin Robinson.

Work around the context menu being shown on F10 key being pressed by
unbiding the key when running tests in DumpRenderTree. The problem
appears when using a recent version of the xkeyboard-config package.

* DumpRenderTree/gtk/DumpRenderTree.cpp:
(setDefaultsToConsistentStateValuesForTesting):


Canonical link: https://commits.webkit.org/108825@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122349 268f45cc-cd09-0410-ab3c-d52691b4dbfc